# FFAudioPlayer

./: .gitignore  Info.plist  Package.swift  README.md  build.sh  run_tests.sh  sign.sh
FFAudioPlayer.xcframework/: Info.plist
FFAudioPlayer.xcframework/_CodeSignature/: CodeDirectory  CodeRequirements  CodeRequirements-1  CodeResources  CodeSignature
FFAudioPlayer.xcframework/macos-arm64_x86_64/FFAudioPlayer.framework/: FFAudioPlayer
FFAudioPlayer.xcframework/macos-arm64_x86_64/FFAudioPlayer.framework/Versions/A/Headers/: FFAudioPlayer.h
FFAudioPlayer.xcframework/macos-arm64_x86_64/FFAudioPlayer.framework/Versions/A/Modules/: module.modulemap
FFAudioPlayer.xcframework/macos-arm64_x86_64/FFAudioPlayer.framework/Versions/A/_CodeSignature/: CodeResources
ffaudioplayer/: build.sh
ffaudioplayer/sources/: FFAudioPlayer.cpp  FFAudioPlayer.h  backend.cpp  backend.h
ffmpeg/: 0001-Fix-ld-1-duplicate-symbols-error.patch  build.sh
nasm/: build.sh
pkgconf/: build.sh  pkgconf-2.4.3.tar.xz
tests/: .gitignore  CMakeLists.txt  main.cpp
